worked on spacing, font sizes, and opactity in price boxes; corrected price background color and font opacity and spacing; corrected button background and border

--- a/css/global.css
+++ b/css/global.css
@@ -8,10 +8,21 @@ img {
 .navContainer {
     margin: 1px, auto;
     background-color: rgb(255, 255, 255);
-    font-size: 13.5px;
-    color: rgba(0, 0, 0, .5);
-    /*color: darkslategray;*/
+    font-size: 14.5px;
 }
+
+.gen {
+    color:  rgba(0, 0, 0, .5);
+}
+
+.specLogo {
+    color: rgba(0, 0, 0, .6);
+}
+
+.specPrice {
+    color: black;
+}
+ 
 .rowNav {
     margin-bottom: 2px;
 }
@@ -27,92 +38,112 @@ img {
 }
 .columnNav li {
     display: inline;
-    margin-right: 30px;
+    margin-right: 22px;
 }
 body {
     background-color: rgb(255, 255, 255);
 }
 header {
-    background-image: url("../img/background.jpg");
+    background-image: url("../img/backgroundc.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 468px;
-    padding: 200px;
+    height: 430px;
+    padding: 150px;
     margin-left: 0;
     margin-right: 0;
     color: white;
     text-shadow: 0px 2px 2px black;
     text-align: center;
-    font-size: 50px; 
+    font-size: 50px;
 }
 
 .prices {
-    margin-left: 115.5px;
-    margin-right: 115.5px;
+    /*margin-left: 130px;
+    margin-right: 130px;*/
+    margin-left: 13.25%;
+    margin-right: 13.25%;
     display: flex;
+    margin-top: 30px;
 }
 
-.price5ContainerCol {
+.priceContainerCol {
     flex: 3;
     padding: 10px;
-    margin: 30px 5px;
-    /*margin-right: 5px;*/
+    margin: 2px;
     text-align: center;
 }
 
 .rowpriceType {
-    font-size: 13px;
+    font-size: 17px;
     color: white;
-    padding: 30px;
-    letter-spacing: 2px;
+    /*padding: 30px;*/
+    letter-spacing: 3px;
 }
 
 .rowpriceAmount {
-    font-size: 60px;
+    font-size: 90px;
     color: white;
-    padding: 10px;
+    /*padding: 10px;*/
+    font-weight: 300;
 }
 
 .rowpriceSchedule {
-    font-size: 16;
+    font-size: 20px;
     color: rgba(255, 255, 255, 0.5);
-    padding: 10px;
+    /*padding: 10px;*/
 }
 /*apply shading on image and all of the color headers. figure out span on the pricing text */
 .price5Head {
-    background-color: rgb(64, 131, 61);
-    /*display: flex;*/
-    margin-bottom: 40px;
+    background-color: rgba(64, 131, 61, .9);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
-
-.priceDetails > div {
-    border-bottom: 1px solid black;
-}
-/*do priceDetails > div. the > sign means "within" so that says all of the divs within the class." NEED TO ADD THE TOP, BOTTOM, AND SIDES. */
-.price25ContainerCol {
-    flex: 3;
-    padding: 10px;
-    margin-right: 10px;
-}
-
 .price25Head {
-    background-color: rgb(32, 52, 116);
-    /*display: flex;*/
-    margin-bottom: 40px;
-}
-
-.price45ContainerCol {
-    flex: 3;
-    padding: 10px;
-    margin-right: 10px;
+    background-color: rgba(32, 52, 116, .9);
 }
 
 .price45Head {
-    background-color: rgb(14, 14, 14);
-    /*display: flex;*/
-    margin-bottom: 40px;
+    background-color: rgba(14, 14, 14, .9);
 }
+
+.priceDetails > div {
+    border: 1px solid rgb(215, 215, 215);
+    /*border-right: 1px solid rgb(215, 215, 215);
+    border-bottom: 1px solid rgb(215, 215, 215);
+    border-left: 1px solid rgb(215, 215, 215);*/
+    text-align: center;
+    background-color: rgb(245, 245, 245);
+    padding: 10px; 
+    color: rgba(0, 0, 0, .7)
+}
+
+.priceChoose {
+    border: 1px solid rgb(215, 215, 215);
+    /*border-right: 1px solid rgb(215, 215, 215);
+    border-bottom: 1px solid rgb(215, 215, 215);
+    border-left: 1px solid rgb(215, 215, 215);*/
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    padding: 27px;
+    margin-bottom: 20px;
+}
+
+button {
+    border-radius: 150px;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(215, 215, 215);
+    /*border-top: 2px solid rgb(215, 215, 215);
+    border-right: 2px solid rgb(215, 215, 215);
+    border-bottom: 2px solid rgb(215, 215, 215);
+    border-left: 2px solid rgb(215, 215, 215);*/
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+
 
 /*for the gray text in footer . . . still have to figure out the "links"*/
 footer {
